codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 44
expression: lines_to_single_string(&decision)
---
✔ You approved Codez to run echo hello world this time
