codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 169
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





✔ Auto-reviewer approved Codez to run rm -f /tmp/guardian-approved.sqlite this
  time


› Ask Codez to do anything

  gpt-5.6-sol default · /tmp/project
